@@ -25,7 +25,11 @@ Changes
 Fixes
 =====
 
- - Fixed the error message to be more descriptive when the condition in a 
+ - Fixed an issue where ``COPY FROM``, ``INSERT-BY-SUBQUERY`` or bulk ``INSERT``
+   statements could not be killed when high pressure is put on data node thread
+   pools.
+
+ - Fixed the error message to be more descriptive when the condition in a
    `CASE/WHEN` expression is not a boolean.
 
  - Fixed an issue which caused an exception if ``EXPLAIN`` is used on a
